--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Email ID : cseamritanshukeshari@gmail.com
 <br/>
 <br/>
 <br/>
-<a href ="mailto:amritanshu5455@gmail.com">
+<a href ="mailto:cseamritanshukeshari@gmail.com">
 <button class="a" style="background-color:red;
  outline:4px solid white;
  color: white;
