--- a/index.html
+++ b/index.html
@@ -2,18 +2,31 @@
 <html lang="en">
 <head>
 <title>Me</title>
+<style>
+button{
+  background-color: #F36;
+  border:none;
+  color:#fff;
+  padding: 8px 16px;
+  text-align:center;
+  font-size:10px;
+}
+p{
+color:green;
+}
+</style>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;
 box-sizing: border-box; background-color:pink;">
 
-<header style="background-color: #003;
+<header style="background-color: #2A3;
   text-transform:capitalize;
   text-align: center;
   border:5px dashed green;
   outline: 2px solid red;
-  color: #250;">
+  color: #25F;">
 
 
   <em><strong><h1><pre>My Resume Website</pre></h1></strong></em>
@@ -29,12 +42,10 @@ box-sizing: border-box; background-color:pink;">
 </h1>
 <hr width ="110px" align="left"/>
 <br/>
-<img src="https://i.imgflip.com/521lm2.jpg" title="Amritanshu Keshari" style="width:100%;
-height:300px;
-border:2px solid yellow;"/>
+
 <br/>
-<i> Howdy, my name is Mr. Amritanshu Keshari from Bokaro District, Jharkhand. I am proud to be an indian. I have completed my matriculation in DAV Public School, TTPS Lalpania from CBSE Board. Currently pursuing diploma in computer science and engineering. I am dedicated to learn skills and utilize them to contribute in digital world. I want solve problems using technology. As we know that, in computer science and engineering we learn how to solve problems using technologies and coding skills. 
- I am a student of Jharkhand's best and top college Government Polytechnic College where all faculities are good and very helpful in nature. I am looking forward to be a Web Developer.</i>
+<i> Myself Amritanshu Keshari from TTPS Lalpania, Bokaro, Jharkhand. I am proud to be an indian. I have completed my matriculation from DAV Public School, TTPS Lalpania. Currently, I am pursuing Diploma in Computer Science and Engineering from Government Polytechnic College, Adityapur. I am dedicated to learn new skills and utilize them to contribute in the world of technology. 
+ I am a student of Jharkhand's best and top college Government Polytechnic College where all faculities are good and very helpful in nature. I am looking forward to be a Computer Engineer. My hobbies are playing cricket, searching about new things and creating innovative devices. I likes to work with technology.</i>
 <br/>
 <br/>
 <br/>
@@ -52,28 +63,181 @@ border:2px solid yellow;"/>
 <p><pre>Achievement: Inspire Award, 2018</pre></p>
 -->
 <ul>
-<p><pre><strong>HTML</strong></pre></p><progress value="83" min="0" max="100"></progress>
-<p><pre><strong>CSS</strong></pre></p><progress value="40" min="0" max="100"></progress>
-<p><pre><strong>JavaScript</strong></pre></p><progress value="25" min="0" max="100"></progress>
-<p><pre><strong>C/C++</strong></pre></p><progress value="40" min="0" max="100"></progress>
+<p><pre><strong>HTML</strong></pre></p><progress value="90" min="0" max="100"></progress>
+<p><pre><strong>CSS</strong></pre></p><progress value="50" min="0" max="100"></progress>
+<p><pre><strong>JavaScript</strong></pre></p><progress value="75" min="0" max="100"></progress>
+<p><pre><strong>C/C++</strong></pre></p><progress value="60" min="0" max="100"></progress>
+<p><pre><strong>Powershell Scripting</strong></pre></p><progress value="60" min="0" max="100"></progress>
 </ul>
 <br/>
 <br/>
 <br/>
 <h1>
+<p style="color:red;">MY TOOLS</p>
+</h1>
+<hr width ="110px" align="left"/>
+<i> I have some skills related to these tools are as follows as: </i>
+<!--
+<u>
+<p><pre>Name: Amritanshu Keshri</pre></p>
+<p><pre>Qualification: Pursuing Diploma in Engg.</pre></p>
+<p><pre>College: Government Polytechnic Adityapur</pre></p>
+<p><pre>Achievement: Inspire Award, 2018</pre></p>
+-->
+<ul>
+<p><pre><strong>Command Prompt</strong></pre></p><progress value="85" min="0" max="100"></progress>
+<p><pre><strong>Microsoft Azure</strong></pre></p><progress value="40" min="0" max="100"></progress>
+<p><pre><strong>Powershell</strong></pre></p><progress value="75" min="0" max="100"></progress>
+</ul>
+<br/>
+<br/>
+<br/>
+<h1>
+<p style="color:red;">MY EDUCATION</p>
+</h1>
+<hr width ="167px" align="left"/>
+<!--<i> I have some skills related to these tools are as follows as: </i>-->
+<!--
+<u>
+<p><pre>Name: Amritanshu Keshri</pre></p>
+<p><pre>Qualification: Pursuing Diploma in Engg.</pre></p>
+<p><pre>College: Government Polytechnic Adityapur</pre></p>
+<p><pre>Achievement: Inspire Award, 2018</pre></p>
+-->
+<br/>
+<strong>Government Polytechnic College, Adityapur</strong>
+<br/>
+<br/>
+<!--
+<i> I have completed my matriculation from DAV Public School, TTPS Lalpania. </i><br/>
+-->
+<i> I am pursuing Diploma in Computer Science and Engineering from Government Polytechnic College, Adityapur.  </i><br/>
+<br/>
+<br/>
+<strong>DAV Public School, TTPS Lalpania, Bokaro</strong>
+<br/>
+<br/>
+<i> I have completed my matriculation from DAV Public School, TTPS Lalpania. </i><br/>
+
+<br/>
+<br/>
+<h1>
+<p style="color:red;">MY CERTIFICATION</p>
+</h1>
+<hr width ="195px" align="left"/>
+<!--<i> I have some skills related to these tools are as follows as: </i>-->
+<!--
+<u>
+<p><pre>Name: Amritanshu Keshri</pre></p>
+<p><pre>Qualification: Pursuing Diploma in Engg.</pre></p>
+<p><pre>College: Government Polytechnic Adityapur</pre></p>
+<p><pre>Achievement: Inspire Award, 2018</pre></p>
+-->
+<br/>
+<strong>Microsoft Azure Administrator Bootcamp</strong><br>
+<p>IFI Techsolutions</p>
+<i>I have completed my Microsoft Azure Administrator Bootcamp from IFI Techsolutions. I have learned about the cloud concept of Microsoft Azure.
+<br/>
+<a href="https://drive.google.com/file/d/1JzFGGOsT1NBvUZ3xoNurEEpofzvLEKlq/view?usp=drivesdk">
+<br/>
+<button>Certificate of Completion </button>
+</a>
+<br/>
+<br/>
+<strong>HTML, CSS and JavaScript Certification</strong><br>
+<p>Udemy</p>
+<i>I have completed my HTML, CSS and JavaScript Certification from Udemy. I have learned about the beginner concept of Web Designing.
+<br/>
+<a href="https://www.udemy.com/certificate/UC-e97f6a54-02ff-4477-b61d-073c4b968349/">
+<br/>
+<button>Certificate of Completion </button>
+</a>
+<br/>
+<br/>
+<br/>
+<br/>
+<h1>
+<p style="color:red;">MY EXPERIENCE</p>
+</h1>
+<hr width ="167px" align="left"/>
+<!--<i> I have some skills related to these tools are as follows as: </i>-->
+<!--
+<u>
+<p><pre>Name: Amritanshu Keshri</pre></p>
+<p><pre>Qualification: Pursuing Diploma in Engg.</pre></p>
+<p><pre>College: Government Polytechnic Adityapur</pre></p>
+<p><pre>Achievement: Inspire Award, 2018</pre></p>
+-->
+<br/>
+<strong>Curriculum Developer Internship</strong>
+<br/>
+<br/>
+<i> I have done my internship in Team Everest who help poor students in studies. I have done my intership for 1 month as a Curriculum Developer Intern and developed a practice book of English for students. </i><br/>
+<br/>
+
+<a href="https://drive.google.com/file/d/1JzFGGOsT1NBvUZ3xoNurEEpofzvLEKlq/view?usp=drivesdk">
+<br/>
+<button>Certificate of Internship </button>
+</a>
+<br/>
+<a href="https://drive.google.com/file/d/1lYfYSzamZljxdAkooKpKEw83KQu944G-/view?usp=drivesdk">
+<br/>
+<button>Letter of Recommendation </button>
+<br/>
+</a>
+<br/>
+<br/>
+<br/>
+<br/>
+
+
+<h1>
 <p style="color:red;">MY PROJECTS</p>
 </h1>
 <hr width ="150px" align="left"/>
-I have created two projects in two months are as follows as:
+I have created five projects in these months are as follows as:
 <br/>
 <br/>
-<strong>Simple Calculator website</strong>
+<strong>My College website</strong><br>
 <br/>
-<iframe src="https://practical-villani-c00603.netlify.app" width="70%" height="30%"></iframe>
+<a href="https://gpadityapur.netlify.app/">
+<button>Click Here </button>
 <br/>
-<strong>Birthday Day Celebration Website</strong>
+</a>
 <br/>
-<iframe src="https://happybirthdaybhaiya.netlify.app" width="70%" height="30%"></iframe>
+<strong>Note Application</strong><br>
+<br/>
+<a href="https://pprnotepad.netlify.app/">
+<button>Click Here </button>
+<br/>
+</a>
+<br/>
+<strong>Covid-19 Project</strong><br>
+<br/>
+<a href="https://coronaacovid19.netlify.app/">
+<button>Click Here </button>
+<br/>
+</a>
+<br/>
+<strong>Home Town Website</strong><br>
+<a href="https://hometownofme.netlify.app/">
+<br>
+<button>Click Here </button>
+<br/>
+</a>
+<br/>
+<strong>Birthday Wishing Website</strong><br>
+<a href="https://happybirthdayji.netlify.app/">
+<br>
+<button>Click Here </button>
+<br/>
+</a>
+
+
+
+
+
+
 <br/>
 <br/>
 <br/>
@@ -93,7 +257,7 @@ Email ID : cseamritanshukeshari@gmail.com
  outline:4px solid white;
  color: white;
  border:6px solid black;
- display:block;">Send Feedback
+ display:block; text-decoration:none;">Send Feedback
  
 </button>
 <br/>
